Design Hero Section Of The Website

--- a/index.html
+++ b/index.html
@@ -5,26 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Satisfy&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <div class="header">
-        LOGO
-        <a href="http://">link 1</a>
-        <a href="http://">link 2</a>
-        <a href="http://">link 3</a>
+        <img class="logo" src="./images/logo.png" alt="website_logo">
+        <a class="nav-i" href="http://">Home</a>
+        <a class="nav-i" href="http://">About Us</a>
+        <a class="nav-i" href="http://">Contact</a>
     </div>
         <div class="hero">
-            <div class="hero-text">This website is awesome</div>
+
+
+            <div class="one">
+            <div class="hero-text">Make Your Design Come To Life</div>
                 <div class="sec-text">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                     sed do eiusmod tempor incididunt ut labore et dolore magna 
-                    aliqua. Eget nunc scelerisque viverra mauris in aliquam sem 
-                    fringilla ut. Commodo sed egestas egestas fringilla phasellus. 
-                    Eu facilisis sed odio morbi quis.
+                    aliqua.
                 </div>
-                    <img class="himg" src="./images/PH" alt="placeholder image" height="250px" width="400px">
-                        <button class="Hbutton">CONTACT ME !</button>
+                    <button class="Hbutton">CONTACT ME !</button>
+            </div>
+            <div class="two">
+                <img class="himg" src="./images/roomkrita.gif" alt="placeholder image">
+            </div>
+                        
 
         </div>
 </body>
