Design hero section of the website

--- a/index.html
+++ b/index.html
@@ -11,6 +11,87 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    
+    <nav class="navbar">
+        <div class="container">
+            <div class="logo">Meh.Studios</div>
+            <ul class="nav">
+                <li>
+                    <a href="#">Home</a>
+                </li>
+                <li>
+                    <a href="#">About</a>
+                </li>
+                <li>
+                    <a href="#">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+
+    <header class="header">
+        <div class="container">
+            <div>
+                <h1>Make Your Design Come To Life</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <button>CONTACT ME!</button>
+            </div>
+
+            <video src="./images/roomvideo.webm" loop autoplay muted></video>
+        </div>
+    </header>
+
+
+    <section class="boxes">
+        <div class="container">
+            <h2>Our Services</h2>
+
+            <div class="box">
+                <img class="pics" src="./images/hall.jpg" alt="hall img">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing.
+                </p>
+            </div>
+
+            <div class="box">
+                <img class="pics" src="./images/kitchen.jpg" alt="kitchen img">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing.
+                </p>
+            </div>
+
+            <div class="box">
+                <img class="pics" src="./images/bedroom.jpg" alt="bedroom img">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing.
+                </p>
+            </div>
+
+            <div class="box">
+                <img class="pics" src="./images/bathroom.jpg" alt="bathroom img">
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing.
+                </p>
+            </div>
+        </div>
+    </section>
+
+
+    <section class="testimonial">
+        <h2>Testimonials</h2>
+        <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus laborum neque corrupti quibusdam natus quo?</h3>
+    </section>
+
+
+    <section class="contact">
+        <h1>Lorem ipsum dolor sit amet consectetur adipisicing.</h1>
+        <button>EMAIL US</button>
+        <button>INSTAGRAM</button>
+    </section>
+
+
+    <footer class="foot">
+        copyright @ Meh. Studios 2022
+    </footer>
 </body>
 </html>
