Create testimonial section of the website

--- a/index.html
+++ b/index.html
@@ -79,8 +79,10 @@
 
 
     <section class="testimonial">
+        <div class="container">
         <h2>Testimonials</h2>
-        <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus laborum neque corrupti quibusdam natus quo?</h3>
+        <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut excepturi nostrum vel laudantium voluptatibus eos. Consequatur itaque blanditiis debitis laboriosam aliquid ad quod? Blanditiis nobis hic dolorum expedita cupiditate, distinctio velit in repellendus dicta quia deserunt beatae consequuntur nemo soluta temporibus. Iusto tempore possimus voluptate veritatis voluptas distinctio quo assumenda.</h3>
+        </div>
     </section>
 
 
