--- a/index.html
+++ b/index.html
@@ -87,9 +87,13 @@
 
 
     <section class="contact">
-        <h1>Lorem ipsum dolor sit amet consectetur adipisicing.</h1>
-        <button>EMAIL US</button>
-        <button>INSTAGRAM</button>
+        <div class="container">
+            <h1>Have a project in mind? Hit us up anytime !</h1>
+            <div>
+            <button>EMAIL US</button>
+            <button>INSTAGRAM</button>
+            </div>
+        </div>
     </section>
 
 
