Replace dummy text with original

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                     <a href="#">Home</a>
                 </li>
                 <li>
-                    <a href="#">About</a>
+                    <a href="#2">About</a>
                 </li>
                 <li>
-                    <a href="#">Contact</a>
+                    <a href="#3">Contact</a>
                 </li>
             </ul>
         </div>
@@ -33,8 +33,8 @@
         <div class="container">
             <div>
                 <h1>Make Your Design Come To Life</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                <button>CONTACT ME!</button>
+                <p>We are a archviz studio & agency focused on delivering immersive 3d renders for architecture and games to our clients and partners.</p>
+                <a href="https://www.instagram.com/_Chicken.man"><button>CONTACT ME !</button></a>
             </div>
 
             <video src="./images/roomvideo.webm" loop autoplay muted></video>
@@ -42,7 +42,7 @@
     </header>
 
 
-    <section class="boxes">
+    <section class="boxes" id="2">
         <h2>Our Services</h2>
         <div class="container">
             
@@ -50,38 +50,40 @@
             <div class="box">
                 <img class="pics" src="./images/hall.jpg" alt="hall img">
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing.
+                    Realistic interior renderings in no time
                 </p>
             </div>
 
             <div class="box">
                 <img class="pics" src="./images/kitchen.jpg" alt="kitchen img">
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing.
+                    Cinematic animation/walkthrough of 3d renders
                 </p>
             </div>
 
             <div class="box">
                 <img class="pics" src="./images/bedroom.jpg" alt="bedroom img">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing.
+                    Realistic exterior real estate building renderings
                 </p>
             </div>
 
             <div class="box">
                 <img class="pics" src="./images/bathroom.jpg" alt="bathroom img">
                 <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing.
+                    Architectural visualization for game stuidos
                 </p>
             </div>
         </div>
     </section>
 
 
-    <section class="testimonial">
+    <section class="testimonial" id="3">
         <div class="container">
         <h2>Testimonials</h2>
-        <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut excepturi nostrum vel laudantium voluptatibus eos. Consequatur itaque blanditiis debitis laboriosam aliquid ad quod? Blanditiis nobis hic dolorum expedita cupiditate, distinctio velit in repellendus dicta quia deserunt beatae consequuntur nemo soluta temporibus. Iusto tempore possimus voluptate veritatis voluptas distinctio quo assumenda.</h3>
+        <h3>Meh. Studios came highly recommended and performed to those standards. 
+            They did an excellent job at rendering a great room and kitchen for a custom home we are building. 
+            Communication was fantastic, timelines were speedy and the final outcome was so impressive. Looking forward to work with you guys again ! <br> ---- Felix Kjellberg</h3>
         </div>
     </section>
 
@@ -90,8 +92,8 @@
         <div class="container">
             <h1>Have a project in mind? Hit us up anytime !</h1>
             <div>
-            <button>EMAIL US</button>
-            <button>INSTAGRAM</button>
+            <a href="mailto:19saijadhav@gmail.com"><button>EMAIL US</button></a>
+            <a href="https://www.instagram.com/_Chicken.man"><button>INSTAGRAM</button></a>
             </div>
         </div>
     </section>
