Make site mobile responsive & change pictures

--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@
             </div>
 
             <div class="box">
-                <img class="pics" src="./images/bedroom.jpg" alt="bedroom img">
+                <img class="pics" src="./images/building.jpg" alt="bedroom img">
                 <p>
                     Realistic exterior real estate building renderings
                 </p>
             </div>
 
             <div class="box">
-                <img class="pics" src="./images/bathroom.jpg" alt="bathroom img">
+                <img class="pics" src="./images/bedroom.jpg" alt="bedroom img">
                 <p>
                     Architectural visualization for game stuidos
                 </p>
@@ -92,7 +92,7 @@
         <div class="container">
             <h1>Have a project in mind? Hit us up anytime !</h1>
             <div>
-            <a href="mailto:19saijadhav@gmail.com"><button>EMAIL US</button></a>
+            <a href="mailto:19saijadhav@gmail.com"><button>.EMAIL US.</button></a>
             <a href="https://www.instagram.com/_Chicken.man"><button>INSTAGRAM</button></a>
             </div>
         </div>
