Add responsive dimension for ipad and center button

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="container">
             <h1>Have a project in mind? Hit us up anytime !</h1>
             <div>
-            <a href="mailto:19saijadhav@gmail.com"><button>.EMAIL US.</button></a>
+            <a href="mailto:19saijadhav@gmail.com"><button>EMAIL US</button></a>
             <a href="https://www.instagram.com/_Chicken.man"><button>INSTAGRAM</button></a>
             </div>
         </div>
